--- a/learn-certs-pr/azure-developer-legacy.yml
+++ b/learn-certs-pr/azure-developer-legacy.yml
@@ -7,9 +7,7 @@ uid: certification.azure-developer-legacy
 certificationRenewalUid: renewal.azure-developer
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  Diese Version der Zertifizierung ist nicht mehr verfügbar. Wenn Sie diese Version der Zertifizierung haben, erhalten Sie automatisch die neueste Version der Zertifizierung.
-  
-  Beide Versionen der Zertifizierung werden in Ihren Zertifizierungen aufgeführt. Sie müssen nur die neuere Version erneuern. Sobald die vorherige Version abläuft, wird sie in den Abschnitt mit dem Zertifizierungsverlauf Ihres Transkripts verschoben.
+  <div><font color="#D83B01">Diese Version der Zertifizierung ist nicht mehr verfügbar. Wenn Sie diese Version der Zertifizierung haben, erhalten Sie automatisch die neueste Version der Zertifizierung.<br/><br/>  Beide Versionen der Zertifizierung werden in Ihren Zertifizierungen aufgeführt. Sie müssen nur die neuere Version erneuern. Sobald die vorherige Version abläuft, wird sie in den Abschnitt mit dem Zertifizierungsverlauf Ihres Transkripts verschoben.<br/><br/></font></div>
   
   Kandidaten für die Azure Developer Associate-Zertifizierung sollten über Fachkenntnisse beim Entwerfen, Erstellen, Testen und Verwalten von Cloud-Anwendungen und - Services in Microsoft Azure verfügen.
   
