--- a/learn-certs-pr/d365-functional-consultant-customer-service-legacy.yml
+++ b/learn-certs-pr/d365-functional-consultant-customer-service-legacy.yml
@@ -7,9 +7,7 @@ uid: certification.d365-functional-consultant-customer-service-legacy
 certificationRenewalUid: renewal.d365-functional-consultant-customer-service
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  Diese Version der Zertifizierung ist nicht mehr verfügbar. Wenn Sie diese Version der Zertifizierung haben, erhalten Sie automatisch die neueste Version der Zertifizierung.
-  
-  Beide Versionen der Zertifizierung werden in Ihren Zertifizierungen aufgeführt. Sie müssen nur die neuere Version erneuern. Sobald die vorherige Version abläuft, wird sie in den Abschnitt mit dem Zertifizierungsverlauf Ihres Transkripts verschoben.
+  <div><font color="#D83B01">Diese Version der Zertifizierung ist nicht mehr verfügbar. Wenn Sie diese Version der Zertifizierung haben, erhalten Sie automatisch die neueste Version der Zertifizierung.<br/><br/>  Beide Versionen der Zertifizierung werden in Ihren Zertifizierungen aufgeführt. Sie müssen nur die neuere Version erneuern. Sobald die vorherige Version abläuft, wird sie in den Abschnitt mit dem Zertifizierungsverlauf Ihres Transkripts verschoben.<br/><br/></font></div>
   
   Wenn Sie ein Fachberater sind, der für die Konfiguration und Implementierung von Dynamics 365-Lösungen für Kunden verantwortlich ist, können Sie diese Zertifizierung verwenden, um Ihre Fähigkeiten ins rechte Licht zu rücken und Ihre Karriere voranzutreiben. Ein Fachberater für Dynamics 365 Customer Service implementiert Omnichannel-Lösungen, die sich auf Service, Qualität, Zuverlässigkeit, Effizienz und Kundenzufriedenheit konzentrieren.Als Fachberater wissen Sie, wie man mit Projektmanagern, Entwicklern und Lösungsarchitekten zusammenarbeitet. Sie sollten mindestens ein bis drei Jahre Erfahrung als Fachberater bei der Implementierung von Dynamics 365 haben.
   
