--- a/learn-certs-pr/d365-functional-consultant-marketing-legacy.yml
+++ b/learn-certs-pr/d365-functional-consultant-marketing-legacy.yml
@@ -7,9 +7,7 @@ uid: certification.d365-functional-consultant-marketing-legacy
 certificationRenewalUid: renewal.d365-functional-consultant-marketing
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  Diese Version der Zertifizierung ist nicht mehr verfügbar. Wenn Sie diese Version der Zertifizierung haben, erhalten Sie automatisch die neueste Version der Zertifizierung.
-  
-  Beide Versionen der Zertifizierung werden in Ihren Zertifizierungen aufgeführt. Sie müssen nur die neuere Version erneuern. Sobald die vorherige Version abläuft, wird sie in den Abschnitt mit dem Zertifizierungsverlauf Ihres Transkripts verschoben.
+  <div><font color="#D83B01">Diese Version der Zertifizierung ist nicht mehr verfügbar. Wenn Sie diese Version der Zertifizierung haben, erhalten Sie automatisch die neueste Version der Zertifizierung.<br/><br/>  Beide Versionen der Zertifizierung werden in Ihren Zertifizierungen aufgeführt. Sie müssen nur die neuere Version erneuern. Sobald die vorherige Version abläuft, wird sie in den Abschnitt mit dem Zertifizierungsverlauf Ihres Transkripts verschoben.<br/><br/></font></div>
   
   Wenn Sie ein funktionaler Berater oder ein Fachmann sind, der Microsoft Dynamics 365 Marketing im täglichen Geschäftsbetrieb seines Unternehmens einsetzt, oder ein Entwickler, der seine Beratungsfähigkeiten verbessern möchte, kann diese Zertifizierung Ihrer Karriere förderlich sein und Ihnen ermöglichen, sich effektiver für Projekte und Werbeaktionen zu positionieren.
   
