--- a/learn-certs-pr/d365-functional-consultant-sales-legacy.yml
+++ b/learn-certs-pr/d365-functional-consultant-sales-legacy.yml
@@ -7,7 +7,7 @@ uid: certification.d365-functional-consultant-sales-legacy
 certificationRenewalUid: renewal.d365-functional-consultant-sales
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  <div><font color="#D83B01">Diese Version der Zertifizierung ist nicht mehr verfügbar. Wenn Sie diese Version der Zertifizierung haben, erhalten Sie automatisch die neueste Version der Zertifizierung.<br/><br/>  Beide Versionen der Zertifizierung werden in Ihren Zertifizierungen aufgeführt. Sie müssen nur die neuere Version erneuern. Sobald die vorherige Version abläuft, wird sie in den Abschnitt mit dem Zertifizierungsverlauf Ihres Transkripts verschoben.<br/><br/></font></div>
+  <div><font color="#D83B01"><strong>Diese Version der Zertifizierung ist nicht mehr verfügbar. Wenn Sie diese Version der Zertifizierung haben, erhalten Sie automatisch die neueste Version der Zertifizierung.<br/><br/>  Beide Versionen der Zertifizierung werden in Ihren Zertifizierungen aufgeführt. Sie müssen nur die neuere Version erneuern. Sobald die vorherige Version abläuft, wird sie in den Abschnitt mit dem Zertifizierungsverlauf Ihres Transkripts verschoben.<br/><br/></strong></font></div>
   
   Wenn Sie ein funktionaler Berater, ein Fachmann, der mit Microsoft Dynamics 365 Sales arbeitet, oder ein Entwickler sind, der seine Beratungsfähigkeiten verbessern möchte, kann diese Zertifizierung Ihrer Karriere förderlich sein. Sie können sich effektiver für Projekte vermarkten und Ihrem Unternehmen zeigen, dass Sie Dynamics 365 Sales anwenden können, um das Vertriebsteam zu stärken.
   
