--- a/learn-certs-pr/courses/40513.yml
+++ b/learn-certs-pr/courses/40513.yml
@@ -7,6 +7,7 @@ uid: course.40513
 courseNumber: '40513-G'
 hoursToComplete: 24
 iconUrl: /media/learn/certification/course.svg
+learningPartnersLink: /learn/certifications/partners
 skillsGained:
 - skill: Am Ende dieses Workshops werden Sie besser in der Lage sein, Verfügbarkeitsgruppen, Managed Disks und SQL Server immer on Availability Groups zu entwerfen und zu verwenden, sowie Designprinzipien bei der Bereitstellung von Speicherplatz für VMs. Darüber hinaus lernen Sie den effektiven Einsatz von Azure Backup, um eine punktgenaue Wiederherstellung zu ermöglichen.
 locales:
